--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,9 @@
             </div>
 
             <div>
-                <img src="imgs/photo.jpg" alt="Photo" class="picture" />
+                <img src="imgs/photo.jpeg" alt="Photo" class="picture" />
+                <img src="imgs/potrait.jpeg" alt="Photo" class="picture" />
+                
             </div>
 
         </div>
