--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             </div>
 
             <div>
-                <img src="imgs/photo.jpeg" alt="Photo" class="picture" />
+                <img src="imgs/potrait.JPG" alt="Photo" class="picture" />
             </div>
 
         </div>
